# parallel-jacobi-mpi

./: README.md  cart2dGrid.cpp  cart2dGrid.h  dataIO.cpp  dataIO.h  jacobiGrid.cpp  jacobiGrid.h  main.cpp
Cmake/: CMakeLists.txt
data/: A_6.txt  b_6.txt
